INT-feat-41a0.43: Responsive backgrounds for Login page (all modes) and common responsive background for all skins in Blitz mode

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -1,7 +1,7 @@
 /* Boilerplate */
 
 /* Rid of annoying Chrome on Android FontBoositng featurebug */
-body * {
+body, body * {
   max-height: 1000000em;
 }
 
@@ -308,3 +308,60 @@ textarea {
 /*.FW {*/
   /*flex-wrap: wrap;*/
 /*}*/
+
+
+body.blitz_ {
+  background-image: none;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: 100% auto ;
+  background-position: bottom 0 right 0;
+}
+
+@media only screen and (max-width: 479px) {
+}
+
+@media only screen and (min-width: 480px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_0500.jpg);
+  }
+}
+
+@media only screen and (min-width: 580px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_0600.jpg);
+  }
+}
+
+/* Desktops and laptops medium-res */
+@media only screen and (min-width: 760px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_0800.jpg);
+  }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen and (min-width: 950px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_1024.jpg);
+  }
+}
+
+@media only screen and (min-width: 1224px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_1280.jpg);
+  }
+}
+
+/* Large screens ----------- */
+@media only screen and (min-width: 1550px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_1600.jpg);
+  }
+}
+
+@media only screen and (min-width: 1824px) {
+  body.blitz_ {
+    background-image: url(../images/background_blitz_1920.jpg);
+  }
+}
