--- a/design/css/login.css
+++ b/design/css/login.css
@@ -1,87 +1,94 @@
-/* Login and Registration screens */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-  /* Styles */
+/* OK =============================================================================================================== */
+body.blitz_body-auth {
+  background-image: none;
+  background-color: black;
+  background-repeat: no-repeat;
+  /*background-size: auto 100%;*/
+  background-size: cover;
+  background-position: bottom 0 right 0;
 }
 
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-  /* Styles */
+body.body-auth {
+  background-image: none;
+  background-color: black;
 }
 
-/* Smartphones (portrait) ----------- */
-@media only screen
-and (max-width : 320px) {
-  /* Styles */
-  body
-  {
+@media only screen and (max-width: 479px) {
+}
+
+@media only screen and (min-width: 480px) {
+  body.body-auth {
+    background-image: url(../images/background_0500_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_0500.jpg);
   }
 }
 
-/* iPads (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-  /* Styles */
-  body
-  {
+@media only screen and (min-width: 580px) {
+  body.body-auth {
+    background-image: url(../images/background_0600_login.jpg);
   }
-}
 
-/* iPads (landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : landscape) {
-  /* Styles */
-  body
-  {
-  }
-}
-
-/* iPads (portrait) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : portrait) {
-  /* Styles */
-  body
-  {
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_0600.jpg);
   }
 }
 
 /* Desktops and laptops medium-res */
-@media only screen
-and (min-width : 760px) {
-  /* Styles */
-  body
-  {
+@media only screen and (min-width: 760px) {
+  body {
+    background-image: url(../images/background_0800_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_0800.jpg);
   }
 }
 
 /* Desktops and laptops ----------- */
-@media only screen
-and (min-width : 1224px) {
-  /* Styles */
-  body 
-  {
+@media only screen and (min-width: 950px) {
+  body.body-auth {
+    background-image: url(../images/background_1024_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_1024.jpg);
+  }
+}
+
+@media only screen and (min-width: 1224px) {
+  body.body-auth {
+    background-image: url(../images/background_1280_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_1280.jpg);
   }
 }
 
 /* Large screens ----------- */
-@media only screen
-and (min-width : 1824px) {
-  /* Styles */
-  body 
-  {
+@media only screen and (min-width: 1550px) {
+  body.body-auth {
+    background-image: url(../images/background_1600_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_1600.jpg);
   }
 }
 
-/* iPhone 4+ ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-  /* Styles */
+@media only screen and (min-width: 1824px) {
+  body.body-auth {
+    background-image: url(../images/background_1920_login.jpg);
+  }
+
+  body.blitz_body-auth {
+    background-image: url(../images/background_blitz_login_1920.jpg);
+  }
 }
+
 
 @media screen
 {
@@ -157,80 +164,6 @@ body {
 
 }
 
-/*
-
-#log_status, #log_title
-{
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-
-  color: #0a1c25;
-  width: 100%;
-  text-align: center;
-
-  background-color     : #FFFFFF;
-  filter               : alpha(opacity=90);
-  -moz-opacity         : 0.9;
-  -khtml-opacity       : 0.9;
-  opacity              : 0.9;
-}
-
-#log_description
-{
-  color:  #b1daf2;
-  text-align: justify;
-}
-
-#log_register {
-  font-family:Arial, Helvetica, sans-serif;
-  font-size: 160%;
-
-  padding: 0.3em;
-  text-align: center;
-  font-weight: bold;
-  color:#497ec7;
-  cursor: pointer;
-
-  background-color     : #000000;
-  border:1px solid #FFFFFF;
-}
-
-#log_register:hover
-{
-  color:#ffffff;
-}
-
-#log_form {
-  padding: 2%;
-  height: 5em;
-}
-
-.log_input_wrapper
-{
-  float: left;
-  margin-left: 2%;
-  width: 46%;
-  text-align: left;
-}
-
-.log_input
-{
-  border:1px solid #000000;
-  background:#ffffff url(../design/images/bg_login.png) repeat-x;
-  color: #000000;
-  width: 100%;
-  left: 0;
-}
-
-
-#log_menu {
-  border-top: solid 1px;
-}
-
-#page_body {
-  margin: 0;
-}
-*/
 
 #log_error {
   font-size: 160%;
@@ -279,7 +212,8 @@ body {
 #login_container ol li.ui-tabs-selected a {
 /*  background: #344566 url("../../skins/EpicBlue/images/ui-bg_highlight-hard_75_344566_1x100.png") repeat-x 50% 50%;*/
 /*  background: #344566 url("../../skins/EpicBlue/images/ui-bg_inset-soft_95_13233e_1x100.png") repeat-x 50% 50%;*/
-  background: #344566 url("images/ui-bg_inset-soft_95_13233e_1x100.png") repeat-x 50% 50%;
+  /*background: #344566 url("images/ui-bg_inset-soft_95_13233e_1x100.png") repeat-x 50% 50%;*/
+  background: #344566;
 }
 
 #login_menu {
