--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -17,25 +17,29 @@
     {-meta-}
 
     <link rel="shortcut icon" href="{D_SN_ROOT_VIRTUAL}favicon.ico?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/jquery-ui.css?{C_var_db_update}" />
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/jquery-ui.css?{C_var_db_update}" />-->
 
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global.min.css?{C_var_db_update}" />
-    <!-- IF LOGIN_LOGOUT -->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/login.min.css?{C_var_db_update}" />
-    <!-- ENDIF -->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global.min.css?{C_var_db_update}" />-->
+    <!--&lt;!&ndash; IF LOGIN_LOGOUT &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/login.min.css?{C_var_db_update}" />-->
+    <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+    <!--&lt;!&ndash;[if IE]>-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global-ie.min.css?{C_var_db_update}" />-->
+    <!--<![endif]&ndash;&gt;-->
+
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.min.css?{C_var_db_update}" />-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin.min.css?{C_var_db_update}" />-->
+    <!--&lt;!&ndash; IF LOGIN_LOGOUT &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/{GAME_MODE_CSS_PREFIX}login_background.min.css?{C_var_db_update}" />-->
+    <!--&lt;!&ndash; ELSE &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}{GAME_MODE_CSS_PREFIX}skin_background.min.css?{C_var_db_update}" />-->
+    <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin_server.css?{C_var_db_update}" />-->
+
+
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global-ie.min.css?{C_var_db_update}" />
     <![endif]-->
-
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.min.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin.min.css?{C_var_db_update}" />
-    <!-- IF LOGIN_LOGOUT -->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/{GAME_MODE_CSS_PREFIX}login_background.min.css?{C_var_db_update}" />
-    <!-- ELSE -->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}{GAME_MODE_CSS_PREFIX}skin_background.min.css?{C_var_db_update}" />
-    <!-- ENDIF -->
-    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin_server.css?{C_var_db_update}" />-->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_override.css?{C_var_db_update}" />
 
     <!-- BEGIN css -->
       <!-- IF css.CONTENT -->
@@ -45,6 +49,8 @@
       <!-- ENDIF -->
     <!-- END css -->
 
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_override.css?{C_var_db_update}" />
+
     <title>{title}</title>
   </head>
 
@@ -52,7 +58,11 @@
     <!-- DEFINE $PLAYER_OPTION_DESIGN_DISABLE_BORDERS = 'no_border_image' -->
   <!-- ENDIF -->
 
-  <body class="style {$PLAYER_OPTION_DESIGN_DISABLE_BORDERS}" style="max-height: 10000000em">
+  <!-- IF LOGIN_LOGOUT -->
+    <!-- DEFINE $BODY_CLASS_AUTH = 'body-auth' -->
+  <!-- ENDIF -->
+
+  <body class="style {$PLAYER_OPTION_DESIGN_DISABLE_BORDERS} {GAME_MODE_CSS_PREFIX}{$BODY_CLASS_AUTH}">
     <script type="text/javascript">
       // Этот скрипт находится здесь, потому что он должен быть выполнен максимально быстро
       var timeBrowser = new Date();
