INT-fix-41a0.45: Fxied jumping of scroll in some browsers

--- a/design/templates/OpenGame/navbar.tpl.html
+++ b/design/templates/OpenGame/navbar.tpl.html
@@ -41,10 +41,10 @@
       <div id="navbar_player_count">{L_top_online}&nbsp;[{USERS_ONLINE}/{USERS_TOTAL}]</div>
     </div>
 
-    <div class="cell contF flexW" id="navbar-container-time">
-      <div class="c_c navbar-container-time-item">
-        <span class="ok">{L_time_local}: <span id="top_time">{TIME_TEXT_LOCAL}</span></span><br />
-        {L_time_server}: <span id="top_time_server">{TIME_TEXT}</span>
+    <div class="contF flexW cell" id="navbar-container-time">
+      <div class="navbar-container-time-item c_c">
+        <div class="ok">{L_time_local}: <span id="top_time">{TIME_TEXT_LOCAL}</span></div>
+        <div>{L_time_server}: <span id="top_time_server">{TIME_TEXT}</span></div>
       </div>
 
       <div class="contF">
