--- a/design/templates/OpenGame/fleet_aks_invite.tpl.html
+++ b/design/templates/OpenGame/fleet_aks_invite.tpl.html
@@ -1,5 +1,6 @@
-<br>
-{vacation}
+<h1>{PAGE_HEADER}</h1>
+
+<!-- INCLUDE fleet_miniatures -->
 
 <table border="0" cellpadding="0" cellspacing="1">
  <tr>
@@ -28,4 +29,3 @@
  </tr>
 </table>
 <br/>
-<!-- INCLUDE fleet_miniatures -->
