FLEET-misc-41a3.1: Added coloring to ship name and quantity on fleet page 0

--- a/design/templates/OpenGame/fleet0.tpl.html
+++ b/design/templates/OpenGame/fleet0.tpl.html
@@ -68,8 +68,8 @@ var speed_factor   = {speed_factor};
             <a href="infos.php?gid={ships.ID}" class="unit_miniatures_wrapper">
               <img src="{I_[ships.ID]}" style="width: 100%; height: 100%;"/>
               <!--<img id="unit_info_image" />-->
-              <div class="a75 unit_info_name">{ships.NAME}</div>
-              <div class="a75 unit_info_level">{ships.AMOUNT_TEXT}</div>
+              <div class="a75 unit_info_name zero">{ships.NAME}</div>
+              <div class="a75 unit_info_level positive">{ships.AMOUNT_TEXT}</div>
 
               <!-- IF ships.SPEED != 0 -->
               <div class="a75 unit_info_speed_title">{L_fl_fleetspeed}</div>
