--- a/design/templates/OpenGame/fleet_page_0_buttons.tpl.html
+++ b/design/templates/OpenGame/fleet_page_0_buttons.tpl.html
@@ -4,6 +4,13 @@
   <th>
     {L_fl_fleet_typ}
   </th>
+
+  <!-- IF PLAYER_OPTION_FLEET_SHIP_SELECT_OLD -->
+  <th>
+    {L_fl_count}
+  </th>
+  <!-- ENDIF -->
+
   <th style="padding-right: 0; border-right: 0" class="c_l" >
     <div id="fleet_page0_footer" class="contFJ">
       <input type="button" value="{L_fl_unselectall}" onclick="zero_fleet();" />
